crates/sgf-core/tests/snapshots/ops_dig_site/add_4_5.snap
---
source: crates/sgf-core/tests/common/mod.rs
expression: value
---
Added dig site site_lost_moments (#4) to planet #585
inverse: RemoveDigSite { site: 4 }

--- gamestate
+++ gamestate
@@ -1404754,6 +1404754,22 @@
 			days_left=90
 			difficulty=3
 		}
+		4=
+		{
+			location=
+			{
+				type=2
+				id=585
+			}
+			last_excavator_country=4294967295
+			excavator_fleet=4294967295
+			type="site_lost_moments"
+			index=0
+			clues=0
+			last_roll=0
+			days_left=90
+			difficulty=1
+		}
 	}
 }
 espionage_operations=
